[package]
name = "martel-printer-programmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "1.7"

[dependencies]
# futures = "0.3"
# tokio = { version = "1.20.1", features = ["full"] }
colored = "2.0.0"
probe-rs = "0.13.0"